
Added a 'shutdown' event handler to POE::Component::Server::TCP.
Combined with the component's alias, this lets some other session shut
down a server.

Began using SourceForge's compile farm for cross-platform testing.
The time reduction in POE's signal tests was too aggressive, causing
some problems on the Debian test system.  Increased the delay a little
bit.


0.1206 2001.03.23
-----------------

Enhance POE::Preprocessor to track macros and constants per package.
Now multiple files sharing the same package also share the same macros
and constants.

Split event substrates into other modules.  It seems like the right
thing to do at the moment.

Karsten Sperling found that POSIX::uname wasn't supported back on
5.005_02 for Win32, but Sys::Hostname is.  Applied Karsten's patch to
use Sys::Hostname, which uses POSIX::uname internally wherever
possible, instead.

Replaced many enum/const statements with constant subs.  Fewer of
these mean less regexps to run against the source code, so startup
should be a little peppier.

Made more Kernel data structures package lexicals.  Runtime should be
slightly quicker.

Remove Exporter use from Kernel and Session, although other modules
like Carp already use it, so it gets loaded no matter what.  I'm about
tapped for startup-optimizing ideas that don't involve rewriting
POE::Preprocessor.

Removed the object layer; files are being restructured as a separate
component.  This is ahead of schedule.

Added POE::Wheel::ReadLine.  This is a Term::ReadLine subset that
cooperates with POE.  Now how do I test it non-interactively?

Remove documentation in POE::Filter::Line and ::Block saying their
put() methods can be used with single logical records.  They can't.

POE::Preprocessor would make regular expressions like /(|a|b)/ when a
sub-expression was optional.  Tweaked it to generate /(a|b)?/ instead.

Rearranged the README sections in an effort to make it more readable.
