@@ -56,4 +56,6 @@ POE::Filter::Reference wants Compress::Zlib
 *                      wants POE::NonExistent
 POE::Wheel::Run        wants IO::Pty
 
+lib/deptest.perl       wants File::Spec
+
 # End.
